add create_subscription ix

--- a/capstone/programs/capstone/Cargo.toml
+++ b/capstone/programs/capstone/Cargo.toml
@@ -20,9 +20,8 @@ custom-heap = []
 custom-panic = []
 
 [dependencies]
-anchor-lang = "0.32.1"
+anchor-lang = { version = "0.32.1", features = ["init-if-needed"]}
 anchor-spl = "0.32.1"
-tuktuk-program = { version = "0.3.2" }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
