--- a/capstone/programs/capstone/Cargo.toml
+++ b/capstone/programs/capstone/Cargo.toml
@@ -20,8 +20,9 @@ custom-heap = []
 custom-panic = []
 
 [dependencies]
-anchor-lang = { version = "0.32.1", features = ["init-if-needed"]}
-anchor-spl = "0.32.1"
+anchor-lang = { version = "0.31.1", features = ["init-if-needed"]}
+tuktuk-program = { git = "https://github.com/helium/tuktuk.git" }
+anchor-spl = "0.31.1"
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
