done with initializing global state and tuktuk task queues

--- a/capstone/package.json
+++ b/capstone/package.json
@@ -5,7 +5,9 @@
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "0.32.1"
+    "@coral-xyz/anchor": "0.32.1",
+    "@helium/tuktuk-sdk": "^0.0.9",
+    "axios": "^1.13.2"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
