--- a/capstone/tuktuk_crank_turner_config.toml
+++ b/capstone/tuktuk_crank_turner_config.toml
@@ -1,3 +1,3 @@
-rpc_url = "http://localhost:8899"
+rpc_url = "https://devnet.helius-rpc.com/?api-key=b9e05c06-0429-46ac-b3b4-91d56edb88ba"
 key_path = "/home/aditya/.config/solana/id.json"
 min_crank_fee = 10000
