--- a/capstone/Anchor.toml
+++ b/capstone/Anchor.toml
@@ -18,3 +18,7 @@ wallet = "~/.config/solana/id.json"
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 \"tests/capstone.ts\""
 devnet = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 \"tests/devnet-demo.ts\""
+create-subscription = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 \"tests/demo/createSubscription.ts\""
+subscribe = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 \"tests/demo/subscribe.ts\""
+cancel-subscription = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 \"tests/demo/cancelSubscription.ts\""
+close-vault = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 \"tests/demo/closeVault.ts\""
